ci: standardize GitHub Actions workflows
Implement consistent GitHub Actions workflows including:\n- Create issue on workflow failure workflow for automated error reporting\n- Simplified release workflow to properly handle npm publishing\n- Standardized CI/CD pipeline configuration for better maintainability\n\nThese changes follow the conventional commits format and ensure consistent automation across the repository.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,15 +2,14 @@ name: Documentation
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main]
     paths:
-      - '**/*.md'
-      - '.github/workflows/docs.yml'
+      - "**/*.md"
+      - ".github/workflows/docs.yml"
   pull_request:
-    branches: [ main, develop ]
     paths:
-      - '**/*.md'
-      - '.github/workflows/docs.yml'
+      - "**/*.md"
+      - ".github/workflows/docs.yml"
 
 jobs:
   markdown-lint:
@@ -19,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "18"
       - name: Install markdownlint-cli
         run: npm install -g markdownlint-cli
       - name: Lint Markdown files
