--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,5 +6,9 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "editorconfig.editorconfig"
+  ],
+  "unwantedRecommendations": [
+    "github.copilot",
+    "github.copilot-chat"
   ]
 }
