--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint .",
     "lint-md": "markdownlint '**/*.md' --ignore node_modules --config .markdownlint.json",
-    "format": "prettier --write .",
+    "format": "eslint --fix .",
     "prepare": "husky install",
     "build": "echo 'No build step required - this is a JavaScript project'"
   },
