--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,67 +1,49 @@
 version: 2
 updates:
-  # Enable version updates for npm
-  - package-ecosystem: "npm"
-    # Look for `package.json` and `lock` files in the root directory
-    directory: "/"
-    # Check for updates once a week
+  - package-ecosystem: npm
+    directory: /
     schedule:
-      interval: "weekly"
-    # Group all updates together
+      interval: weekly
     groups:
       development-dependencies:
-        dependency-type: "development"
+        dependency-type: development
         patterns:
-          - "*"
+          - '*'
       production-dependencies:
-        dependency-type: "production"
+        dependency-type: production
         patterns:
-          - "*"
-    # Set version strategy
+          - '*'
     versioning-strategy: increase
-    # Include dependency scope updates
     allow:
-      - dependency-type: "direct"
-      - dependency-type: "indirect"
-    # Limit the number of open PRs
+      - dependency-type: direct
+      - dependency-type: indirect
     open-pull-requests-limit: 10
-    # Apply security labels to security updates
     labels:
-      - "dependencies"
-      - "security"
-    # Specify reviewers for pull requests
+      - dependencies
+      - security
     reviewers:
-      - "CodySwannGT"
-    # Assign PRs to specific user
+      - CodySwannGT
     assignees:
-      - "CodySwannGT"
-    # Set commit message style
+      - CodySwannGT
     commit-message:
-      prefix: "chore"
-      prefix-development: "chore"
-      include: "scope"
-
-  # Enable version updates for GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
+      prefix: chore
+      prefix-development: chore
+      include: scope
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "weekly"
-    # Group all updates together
+      interval: weekly
     groups:
       github-actions:
         patterns:
-          - "*"
-    # Apply appropriate labels
+          - '*'
     labels:
-      - "dependencies"
-      - "github-actions"
-    # Specify reviewers
+      - dependencies
+      - github-actions
     reviewers:
-      - "CodySwannGT"
-    # Assign PRs
+      - CodySwannGT
     assignees:
-      - "CodySwannGT"
-    # Set commit message style
+      - CodySwannGT
     commit-message:
-      prefix: "ci"
-      include: "scope"
+      prefix: ci
+      include: scope
