--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,62 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:
+    inputs:
+      node_version:
+        description: 'Node.js version to use'
+        required: false
+        default: '20.x'
+        type: string
+      package_manager:
+        description: 'Package manager to use (npm, yarn, or bun)'
+        required: false
+        default: 'npm'
+        type: string
+      working_directory:
+        description: 'Directory to run commands in (if not root)'
+        required: false
+        default: ''
+        type: string
+      skip_lint:
+        description: 'Skip the lint job'
+        required: false
+        default: false
+        type: boolean
+      skip_typecheck:
+        description: 'Skip the typecheck job'
+        required: false
+        default: false
+        type: boolean
+      skip_test:
+        description: 'Skip the test job'
+        required: false
+        default: false
+        type: boolean
+      skip_format:
+        description: 'Skip the format check job'
+        required: false
+        default: false
+        type: boolean
+      skip_build:
+        description: 'Skip the build job'
+        required: false
+        default: false
+        type: boolean
+      skip_security:
+        description: 'Skip the security scan job'
+        required: false
+        default: false
+        type: boolean
+      skip_quality:
+        description: 'Skip the quality workflow'
+        required: false
+        default: false
+        type: boolean
+      skip_github_issue:
+        description: 'Skip creating GitHub issue on failure'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   quality:
@@ -32,7 +88,7 @@ jobs:
     if: ${{ failure() && !contains(github.event.head_commit.message, '[skip ci]') && (github.event.inputs.skip_github_issue != 'true' && inputs.skip_github_issue != true) }}
     # Reference to the GitHub issue creation workflow
     # Note: In actual usage, ensure this file exists in your repository
-    uses: ./.github/workflows/github-issue-on-failure.yml
+    uses: ./.github/workflows/create-github-issue-on-failure.yml
     with:
       workflow_name: 'Version and Release'
     secrets:
