--- a/src/templates/.env.example
+++ b/src/templates/.env.example
@@ -1,8 +1,23 @@
 # Environment Variables Example
 # Copy this file to .env and fill in your actual values
 
-GITHUB_PERSONAL_ACCESS_TOKEN=xxxxxxxx
+# Core API Keys - used for CLI tools and IDE extensions
+GITHUB_PERSONAL_ACCESS_TOKEN=xxxxxxxx # Also used as PAT in GitHub Actions
 CONTEXT7_API_KEY=xxxxxxxx
 BRAVE_API_KEY=xxxxxxxx
-ANTHROPIC_API_KEY=xxxxxxxx
+ANTHROPIC_API_KEY=xxxxxxxx # Also used in GitHub Actions
 OPENAI_API_KEY=xxxxxxxx # (optional) but if given, should configure roo to use either claude or gpt
+
+# GitHub Actions Secrets
+# These should also be added to your GitHub repository secrets
+JIRA_API_TOKEN=xxxxxxxx # (optional) Required for Jira integration
+JIRA_AUTOMATION_WEBHOOK=xxxxxxxx # (optional) General Jira webhook
+JIRA_AUTOMATION_WEBHOOK_DEV=xxxxxxxx # (optional) Environment-specific Jira webhook for dev
+JIRA_AUTOMATION_WEBHOOK_STAGING=xxxxxxxx # (optional) Environment-specific Jira webhook for staging
+JIRA_AUTOMATION_WEBHOOK_PRODUCTION=xxxxxxxx # (optional) Environment-specific Jira webhook for production
+
+# GitHub Actions Variables
+# These should also be added to your GitHub repository variables
+JIRA_BASE_URL=https://your-company.atlassian.net # (optional) Jira instance URL
+JIRA_USER_EMAIL=your-email@example.com # (optional) Jira user email
+JIRA_PROJECT_KEY=PROJ # (optional) Jira project key
