--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,41 +33,11 @@ on:
         required: false
         default: ''
         type: string
-      skip_lint:
-        description: 'Skip the lint job in quality workflow'
+      skip_jobs:
+        description: 'Jobs to skip (comma-separated: lint,typecheck,test,format,build,security,code_quality_check,claude_security_scan,quality,github_issue)'
         required: false
-        default: false
-        type: boolean
-      skip_typecheck:
-        description: 'Skip the typecheck job in quality workflow'
-        required: false
-        default: false
-        type: boolean
-      skip_test:
-        description: 'Skip the test job in quality workflow'
-        required: false
-        default: false
-        type: boolean
-      skip_format:
-        description: 'Skip the format check job in quality workflow'
-        required: false
-        default: false
-        type: boolean
-      skip_build:
-        description: 'Skip the build job in quality workflow'
-        required: false
-        default: false
-        type: boolean
-      skip_security:
-        description: 'Skip the security scan job in quality workflow'
-        required: false
-        default: false
-        type: boolean
-      skip_github_issue:
-        description: 'Skip creating GitHub issue on failure'
-        required: false
-        default: false
-        type: boolean
+        default: ''
+        type: string
 
 # Prevent concurrent runs of the same workflow on the same ref
 concurrency:
@@ -100,12 +70,7 @@ jobs:
       node_version: ${{ inputs.node_version }}
       package_manager: ${{ inputs.package_manager }}
       working_directory: ${{ inputs.working_directory }}
-      skip_lint: ${{ inputs.skip_lint }}
-      skip_typecheck: ${{ inputs.skip_typecheck }}
-      skip_test: ${{ inputs.skip_test }}
-      skip_format: ${{ inputs.skip_format }}
-      skip_build: ${{ inputs.skip_build }}
-      skip_security: ${{ inputs.skip_security }}
+      skip_jobs: ${{ inputs.skip_jobs }}
     secrets:
       PAT: ${{ secrets.PAT }}
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
@@ -157,7 +122,7 @@ jobs:
   create_github_issue_on_failure:
     name: 🚨 Create Github Issue on Failure
     needs: [release]
-    if: ${{ failure() && !contains(github.event.head_commit.message, '[skip ci]') && (github.event.inputs.skip_github_issue != 'true' && inputs.skip_github_issue != true) }}
+    if: ${{ failure() && !contains(github.event.head_commit.message, '[skip ci]') && !contains(inputs.skip_jobs, 'github_issue') }}
     # Reference to the GitHub issue creation workflow
     # Note: In actual usage, ensure this file exists in your repository
     uses: ./.github/workflows/create-github-issue-on-failure.yml
