--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
+    "standard-version": "^9.5.0",
     "ts-jest": "^29.1.2",
     "ts-node": "10.9.2",
     "typescript": "^5.3.3"
