--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,9 @@ jobs:
     name: 📦 Release
     # Reference to the quality checks workflow
     uses: ./.github/workflows/release.yml
+    needs: [determine_environment]
     with:
+      environment: ${{ needs.determine_environment.outputs.environment }}
       node_version: '20.x'
       package_manager: 'npm'
     secrets:
@@ -63,7 +65,7 @@ jobs:
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.18.0'
+          node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
       - name: 📦 Install dependencies
