--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -365,16 +365,30 @@ jobs:
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: |
+          # Create prompt instructing Claude to ignore files in .gitignore
+          cat > code_review_prompt.txt << 'EOF'
+          Perform a code review on the provided code changes. Focus on code quality, best practices, and potential bugs.
+
+          IMPORTANT GUIDELINES:
+          - IGNORE any files that would be excluded by .gitignore (e.g., node_modules/, dist/, build/, coverage/)
+          - DO NOT review generated files, compiled code, or third-party dependencies
+          - Focus on substantive code issues rather than trivial style issues
+          - Be concise and specific in your feedback
+          - When suggesting improvements, explain why they matter
+          EOF
+
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             # For pull requests, check all changes
             git diff -U0 --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | \
             grep -E '\.(js|jsx|ts|tsx|css|scss|html|md)$' | \
-            xargs -I {} sh -c 'git diff -U0 ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- {} | claude -p "code review" --output-format stream-json'
+            grep -v -E 'node_modules/|dist/|build/|coverage/' | \
+            xargs -I {} sh -c 'git diff -U0 ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- {} | claude -p "$(cat code_review_prompt.txt)" --output-format stream-json'
           else
             # For pushes, check the latest commit
             git diff -U0 --name-only HEAD~1 HEAD | \
             grep -E '\.(js|jsx|ts|tsx|css|scss|html|md)$' | \
-            xargs -I {} sh -c 'git diff -U0 HEAD~1 HEAD -- {} | claude -p "code review" --output-format stream-json'
+            grep -v -E 'node_modules/|dist/|build/|coverage/' | \
+            xargs -I {} sh -c 'git diff -U0 HEAD~1 HEAD -- {} | claude -p "$(cat code_review_prompt.txt)" --output-format stream-json'
           fi
         working-directory: ${{ inputs.working_directory || '.' }}
         continue-on-error: true
@@ -434,7 +448,12 @@ jobs:
           11. Dependency vulnerabilities
           12. Use of unsafe or deprecated functions
 
-          Focus only on legitimate security issues. For each issue found, provide:
+          IMPORTANT GUIDELINES:
+          - IGNORE any files that would be excluded by .gitignore (e.g., node_modules/, dist/, build/, coverage/)
+          - DO NOT review generated files, compiled code, or third-party dependencies
+          - Focus only on legitimate security issues in actual application code
+
+          For each issue found, provide:
           - The specific location of the vulnerability
           - The severity level (Critical, High, Medium, Low)
           - A clear explanation of the vulnerability
@@ -453,10 +472,14 @@ jobs:
 
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             # For pull requests, check all relevant changes
-            CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '\.(js|jsx|ts|tsx|py|rb|php|go|java|rs|c|cpp|h|hpp)$' || echo "")
+            CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | \
+                           grep -E '\.(js|jsx|ts|tsx|py|rb|php|go|java|rs|c|cpp|h|hpp)$' | \
+                           grep -v -E 'node_modules/|dist/|build/|coverage/' || echo "")
           else
             # For pushes, check the latest commit
-            CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD | grep -E '\.(js|jsx|ts|tsx|py|rb|php|go|java|rs|c|cpp|h|hpp)$' || echo "")
+            CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD | \
+                           grep -E '\.(js|jsx|ts|tsx|py|rb|php|go|java|rs|c|cpp|h|hpp)$' | \
+                           grep -v -E 'node_modules/|dist/|build/|coverage/' || echo "")
           fi
 
           if [ -z "$CHANGED_FILES" ]; then
