--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,23 +97,7 @@ on:
 # This avoids deadlocks between parent and child workflows
 
 jobs:
-  # Environment validation
-  determine_environment:
-    name: 🌍 Validate Environment
-    runs-on: ubuntu-latest
-    outputs:
-      environment: ${{ steps.validate_env.outputs.environment }}
-    steps:
-      - name: Validate environment input
-        id: validate_env
-        run: |
-          ENV="${{ inputs.environment }}"
-          if [[ "$ENV" != "dev" && "$ENV" != "staging" && "$ENV" != "production" ]]; then
-            echo "::error::Invalid environment value: $ENV. Must be one of: dev, staging, production"
-            exit 1
-          fi
-          echo "environment=$ENV" >> $GITHUB_OUTPUT
-          echo "✅ Environment validated: $ENV"
+  # Environment validation is now done via the inputs
 
   # Quality checks
   # Note: This is a template workflow file.
@@ -135,7 +119,7 @@ jobs:
   # Version bumping and release creation
   version:
     name: 📦 Version
-    needs: [determine_environment, quality]
+    needs: [quality]
     runs-on: ubuntu-latest
     timeout-minutes: 15
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && !contains(inputs.skip_jobs, 'version') && (needs.quality.result == 'success' || needs.quality.result == 'skipped') }}
@@ -184,10 +168,10 @@ jobs:
 
           # Determine the actual tag name based on the environment
           ACTUAL_TAG_NAME=""
-          if [ "${{ needs.determine_environment.outputs.environment }}" == "main" ]; then
+          if [ "${{ inputs.environment }}" == "main" ]; then
             ACTUAL_TAG_NAME="v$NEW_VERSION"
           else
-            ACTUAL_TAG_NAME="v$NEW_VERSION-${{ needs.determine_environment.outputs.environment }}"
+            ACTUAL_TAG_NAME="v$NEW_VERSION-${{ inputs.environment }}"
           fi
 
           # Output the determined tag name for subsequent steps
@@ -199,13 +183,13 @@ jobs:
       - name: 🚀 Push changes
         run: |
           git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}
-          git push --follow-tags origin ${{ needs.determine_environment.outputs.environment }}
+          git push --follow-tags origin ${{ inputs.environment }}
 
   jira_release:
     name: 🔖 Create Jira Release
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs: [determine_environment, quality, version]
+    needs: [quality, version]
     if: ${{ success() && !contains(github.event.head_commit.message, '[skip ci]') && !contains(inputs.skip_jobs, 'jira_release') && (needs.quality.result == 'success' || needs.quality.result == 'skipped') }}
     steps:
       - name: 📥 Checkout repository
@@ -215,11 +199,11 @@ jobs:
         id: check_jira
         run: |
           # Set environment-specific webhook variable
-          if [[ "${{ needs.determine_environment.outputs.environment }}" == "dev" ]]; then
+          if [[ "${{ inputs.environment }}" == "dev" ]]; then
             WEBHOOK="${JIRA_AUTOMATION_WEBHOOK_DEV}"
-          elif [[ "${{ needs.determine_environment.outputs.environment }}" == "staging" ]]; then
+          elif [[ "${{ inputs.environment }}" == "staging" ]]; then
             WEBHOOK="${JIRA_AUTOMATION_WEBHOOK_STAGING}"
-          elif [[ "${{ needs.determine_environment.outputs.environment }}" == "main" ]]; then
+          elif [[ "${{ inputs.environment }}" == "main" ]]; then
             WEBHOOK="${JIRA_AUTOMATION_WEBHOOK_PRODUCTION}"
           fi
 
@@ -243,11 +227,11 @@ jobs:
         with:
           jira-project-key: ${{ inputs.jira_project_key }}
           jira-automation-webhook: ${{ secrets.JIRA_AUTOMATION_WEBHOOK }}
-          build-version: '${{ github.event.repository.name }} (${{ needs.determine_environment.outputs.environment }}) v${{ needs.version.outputs.version }}'
+          build-version: '${{ github.event.repository.name }} (${{ inputs.environment }}) v${{ needs.version.outputs.version }}'
 
   github_release:
     name: 📢 Create GitHub Release
-    needs: [determine_environment, quality, version]
+    needs: [quality, version]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     if: ${{ !contains(inputs.skip_jobs, 'github_release') && (needs.quality.result == 'success' || needs.quality.result == 'skipped') }}
